<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <Spinner
        android:id="@+id/spinnerCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/note_title"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCourses" />

    <EditText
        android:id="@+id/noteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/note_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_text"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/noteTitle"
        app:layout_constraintStart_toStartOf="@+id/noteTitle"
        app:layout_constraintTop_toBottomOf="@+id/noteTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>