<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_recently_notes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/recently_notes" />

    </group>

    <item android:title="@string/menu_communicate">
        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/menu_send" />

        </menu>
    </item>

</menu>