<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gatchang.notepad.ui.NoteActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/next"
        app:showAsAction="ifRoom|withText" />
</menu>